Show pwd in window title

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,7 +12,8 @@ set -g bell-action none
 # Enable mouse
 set -g mouse on
 
-# Turn on focus events
-set-option -g focus-events on
+# Show terminal window title
+set-option -g set-titles on
+set-option -g set-titles-string '#{pane_current_command} - #{pane_current_path}'
 
 source ~/.tmux.snazzy.theme
