--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,6 @@ set -g mouse on
 
 # Show terminal window title
 set-option -g set-titles on
-set-option -g set-titles-string '#{pane_current_command} - #{pane_current_path}'
+set-option -g set-titles-string '#{pane_current_path} - #{pane_current_command}'
 
 source ~/.tmux.snazzy.theme
