--- a/starship.toml
+++ b/starship.toml
@@ -1,4 +1,8 @@
 "$schema" = 'https://starship.rs/config-schema.json'
 
+[directory]
+truncate_to_repo = false
+truncation_length = 0
+
 [ruby]
 detect_variables = []
