--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,12 @@
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
 
+# Modify key bindings
+bind C-Down split-window -v -c "#{pane_current_path}"
+bind C-Up split-window -vb -c "#{pane_current_path}"
+bind C-Right split-window -h -c "#{pane_current_path}"
+bind C-Left split-window -hb -c "#{pane_current_path}"
+
 # Turn off sounds
 set -g visual-activity off
 set -g visual-bell off
