--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,4 @@
-# Make windows and panes start with 1
-set-option -g base-index 1
-set-window-option -g pane-base-index 1
+setw -g aggressive-resize on
 
 # Modify key bindings
 bind C-Down split-window -v -c "#{pane_current_path}"
@@ -20,6 +18,6 @@ set -g mouse on
 
 # Show terminal window title
 set-option -g set-titles on
-set-option -g set-titles-string '#{pane_current_path} - #{pane_current_command}'
+set-option -g set-titles-string '#{window_name} → #{pane_current_path}'
 
 source ~/.tmux.snazzy.theme
