--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,6 +16,10 @@ set -g bell-action none
 
 # Enable mouse
 set -g mouse on
+setw -g mode-keys vi
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # Show terminal window title
 set-option -g set-titles on
