Fix tmux session handling

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,7 @@ bind C-Up split-window -vb -c "#{pane_current_path}"
 bind C-Right split-window -h -c "#{pane_current_path}"
 bind C-Left split-window -hb -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+bind-key b run-shell 'tmux switch-client -l'
 
 # Turn off sounds
 set -g visual-activity off
